an improvement (bug #7851: C++ 'new' conflicts with kernel header asm/system.h).

include/my_global.h:
  an improvement (bug #7851: C++ 'new' conflicts with kernel header asm/system.h).
  redefine 'new' before #include <asm/atomic.h> in any case.