include/my_global.h
@@ -274,10 +274,8 @@ C_MODE_START int __cxa_pure_virtual() {\
 #include <alloca.h>
 #endif
 #ifdef HAVE_ATOMIC_ADD
-#if defined(__ia64__)
 #define new my_arg_new
 #define need_to_restore_new 1
-#endif
 C_MODE_START
 #include <asm/atomic.h>
 C_MODE_END
